# bbTC

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md
include/data_structures/: block_csr.h  csr_graph.h
include/triangle_counting/: bb_tc.h  bb_tc_gpu.h
include/utils/: definitions.h  hooks.hpp  tasks.hpp  utils.hpp
include/utils/PIGO/pigo/: csr.hpp
include/utils/SARMA/include/: sarma.hpp
include/utils/SARMA/include/algorithms/: nicol1d.hpp  probe_a_load.hpp  refine_a_cut.hpp  uniform.hpp
include/utils/SARMA/include/data_structures/: csr_matrix.hpp  sparse_prefix_sum.hpp
include/utils/SARMA/include/tools/: utils.hpp
src/: bbtc.cpp  bbtc.cu
src/data_structures/: block_csr.cpp  csr_graph.cpp
src/triangle_counting/: bb_tc.cpp  bb_tc_helper.cpp  cpu_dense_kernel.cpp  cpu_sparse_kernel.cpp  gpu_dense_kernel.cu  gpu_sparse_kernel.cu
